changed login API to json

--- a/demo-server/public/index.html
+++ b/demo-server/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>MCP Experiment - CRM Demo</title>
-    <script type="text/javascript" src="/app.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
         <h1>MCP Experiment</h1>
 
     </div>
-    <a href="/api/login">Login With Github</a>
+    <button onclick="redirectToGithubLogin()">Login With Github</button>
 </body>
 
 </html>
